tests/ui/fail/invalid-multicase-format.rs
#[argio::argio(multicase = "{")]
fn main(n: usize) -> usize {
    n
}
