tests/ui/fail/invalid-multicase-format.stderr
error: Invalid multicase format
 --> $DIR/invalid-multicase-format.rs:1:28
  |
1 | #[argio::argio(multicase = "{")]
  |                            ^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> $DIR/invalid-multicase-format.rs:1:1
  |
1 | / #[argio::argio(multicase = "{")]
2 | | fn main(n: usize) -> usize {
3 | |     n
4 | | }
  | |_^ consider adding a `main` function to `$DIR/tests/ui/fail/invalid-multicase-format.rs`
